--- a/app/src/main/res/layout/activity_exercise.xml
+++ b/app/src/main/res/layout/activity_exercise.xml
@@ -4,20 +4,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
+    android:background="@color/black"
     tools:context=".ExerciseActivity">
+
+    <ImageView
+        android:id="@+id/imageViewFace"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:scaleType="centerInside"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/face" />
+
 
     <TextView
         android:id="@+id/textViewForExercise"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/black"
         android:gravity="center_vertical|center_horizontal"
+        android:layout_margin="16dp"
         android:padding="16dp"
-        android:textColor="#FFC107"
-        android:textSize="45sp"
-
+        android:textColor="@color/yellow_text"
+        android:textSize="30sp"
         android:textStyle="italic"
-        android:transitionName="pour"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
